--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/build/bin/www"
+    "start": "node ./server/build/bin/www",
+    "build": "npm i && tsc"
   },
   "description": "ExpressJs generated seed in Typescript and connected to MongoDb",
   "main": "./server/build/bin/www",
@@ -31,7 +32,11 @@
     "morgan": "~1.9.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.1",
     "@types/debug": "0.0.30",
+    "@types/express": "^4.11.1",
+    "@types/http-errors": "^1.6.1",
+    "@types/morgan": "^1.7.35",
     "@types/node": "^9.6.2",
     "http": "0.0.0",
     "process": "^0.11.10"
