--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "express-typescript-mongodb-seed",
+  "name": "express-typescript",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./build/bin/www",
-    "build": "npm i && tsc",
-    "build:watch": "npm i && tsc --watch"
+    "build": "rimraf /build && gulp",
+    "dev": "concurrently --kill-others 'npm run build' 'nodemon'"
   },
   "description": "ExpressJs generated seed in Typescript and connected to MongoDb",
   "main": "./build/bin/www",
@@ -15,8 +15,7 @@
   },
   "keywords": [
     "expressjs",
-    "typescript",
-    "mongodb"
+    "typescript"
   ],
   "author": "tocausan",
   "license": "MIT",
@@ -25,18 +24,37 @@
   },
   "homepage": "https://github.com/tocausan/express-typescript-mongodb-seed#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.8",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.1",
     "@types/debug": "0.0.30",
+    "@types/ejs": "^2.5.0",
     "@types/express": "^4.11.1",
     "@types/http-errors": "^1.6.1",
-    "@types/jade": "0.0.30",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.6.2",
+    "app-root-path": "^2.0.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "concurrently": "^3.5.1",
+    "gulp": "^3.9.1",
+    "gulp-embedlr": "^0.5.2",
+    "gulp-ignore": "^2.0.2",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rimraf": "^0.2.2",
+    "gulp-scss": "^1.4.0",
+    "gulp-tsc": "^1.3.2",
+    "gulp-typescript": "^4.0.2",
+    "gulp-util": "^3.0.8",
     "http": "0.0.0",
     "process": "^0.11.10",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "tiny-lr": "^1.1.1",
+    "ts-loader": "^4.1.0",
+    "typescript": "^2.8.1"
   }
 }
