--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-rimraf": "^0.2.2",
+    "gulp-sass": "^4.0.0",
     "gulp-scss": "^1.4.0",
     "gulp-tsc": "^1.3.2",
     "gulp-typescript": "^4.0.2",
